[gd_scene load_steps=11 format=3 uid="uid://cvye026sqiygc"]

[ext_resource type="Script" path="res://levels/level_0.gd" id="1_k2kxx"]
[ext_resource type="PackedScene" uid="uid://bhe1c4vh65vlc" path="res://art/world/scenes/room.tscn" id="1_kv1hm"]
[ext_resource type="PackedScene" uid="uid://ddk8eb8bi25k7" path="res://character/character.tscn" id="2_1t6pp"]
[ext_resource type="Script" path="res://levels/Areas.gd" id="4_30um8"]
[ext_resource type="Texture2D" uid="uid://bkq01db8fsucq" path="res://art/level0/paper_hint.png" id="4_ony6e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g8i80"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfunq"]
size = Vector2(73, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf8jp"]
size = Vector2(37, 33.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfpvr"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ftuvi"]
size = Vector2(32, 26)

[node name="Level0" type="Node2D"]
script = ExtResource("1_k2kxx")

[node name="background" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 192.0
color = Color(0.948794, 0.866047, 0.836694, 1)

[node name="room" parent="." instance=ExtResource("1_kv1hm")]
layer_0/tile_data = PackedInt32Array(589826, 720899, 6, 589827, 655363, 6, 589830, 720899, 6, 589831, 655363, 6, 589832, 720899, 6, 589833, 655363, 6, 589834, 720899, 6, 589835, 655363, 6, 589836, 720899, 6, 589837, 655363, 6, 589838, 720899, 6, 589839, 655363, 6, 589840, 720899, 6, 589841, 655363, 6, 524304, 720899, 6, 524305, 655363, 6, 524302, 655363, 6, 524303, 655363, 6, 524300, 655363, 6, 524301, 720899, 6, 524298, 655363, 6, 524299, 720899, 6, 524296, 655363, 6, 524297, 720899, 6, 524294, 655363, 6, 524295, 720899, 6, 524292, 655363, 6, 524293, 720899, 6, 524290, 720899, 6, 524291, 720899, 6, 458754, 720899, 6, 458755, 720899, 6, 458756, 655363, 6, 458757, 720899, 6, 458758, 655363, 6, 458759, 720899, 6, 458760, 655363, 6, 458761, 720899, 6, 458762, 655363, 6, 458763, 720899, 6, 458764, 655363, 6, 458765, 720899, 6, 458766, 655363, 6, 458767, 720899, 6, 458768, 655363, 6, 458769, 655363, 6, 393218, 720899, 6, 393219, 655363, 6, 393220, 720899, 6, 393221, 655363, 6, 393222, 720899, 6, 393223, 655363, 6, 393224, 720899, 6, 393225, 655363, 6, 393226, 720899, 6, 393227, 655363, 6, 393228, 720899, 6, 393229, 655363, 6, 393230, 720899, 6, 393231, 655363, 6, 393232, 720899, 6, 393233, 655363, 6, 327683, 655363, 5, 327684, 720899, 5, 327685, 655363, 5, 327686, 720899, 5, 327682, 720899, 5, 327687, 655363, 5, 327688, 720899, 5, 327689, 655363, 5, 327690, 720899, 5, 327691, 655363, 5, 327692, 720899, 5, 327693, 655363, 5, 327694, 720899, 5, 327695, 655363, 5, 327696, 720899, 5, 327697, 655363, 5, 262147, 655363, 4, 262148, 720899, 4, 196611, 655363, 2, 196612, 720899, 2, 131075, 655363, 3, 131076, 720899, 3, 65539, 655363, 2, 65540, 720899, 2, 65541, 655363, 2, 65542, 720899, 2, 65543, 655363, 2, 65544, 720899, 2, 65545, 655363, 3, 65546, 720899, 3, 65547, 655363, 3, 65548, 720899, 3, 65549, 655363, 3, 65550, 720899, 3, 65551, 655363, 3, 65552, 720899, 3, 131087, 655363, 3, 131088, 720899, 3, 196623, 655363, 2, 196624, 720899, 2, 262159, 655363, 4, 262160, 720899, 4, 262157, 655363, 4, 262158, 720899, 4, 262155, 655363, 4, 262156, 720899, 4, 262153, 655363, 4, 262154, 720899, 4, 262151, 655363, 4, 262152, 720899, 4, 262149, 655363, 4, 262150, 720899, 4, 196613, 655363, 3, 196614, 720899, 3, 131077, 655363, 3, 131078, 720899, 3, 131079, 655363, 3, 131080, 720899, 3, 131081, 655363, 3, 131082, 720899, 3, 131083, 655363, 3, 131084, 720899, 3, 131085, 655363, 3, 131086, 720899, 3, 196621, 655363, 2, 196622, 720899, 2, 196619, 655363, 2, 196620, 720899, 2, 196617, 655363, 2, 196618, 720899, 2, 196615, 655363, 2, 196616, 720899, 2, 262161, 655363, 4, 196625, 655363, 2, 131089, 655363, 3, 262146, 720899, 4, 196610, 720899, 2, 131074, 720899, 3, 65538, 720899, 2, 65553, 655363, 2, 327698, 720899, 5, 327681, 655363, 5, 65554, 720899, 2, 131090, 720899, 3, 196626, 720899, 2, 262162, 720899, 4, 196609, 655363, 2, 262145, 655363, 4, 65537, 655363, 2, 131073, 655363, 3, 393217, 655363, 6, 393234, 720899, 6, 458753, 655363, 6, 524289, 655363, 6, 589825, 655363, 6, 655361, 655363, 6, 655362, 720899, 6, 655366, 720899, 6, 655367, 655363, 6, 655368, 720899, 6, 655369, 655363, 6, 655370, 720899, 6, 655371, 655363, 6, 655372, 720899, 6, 655373, 655363, 6, 655374, 720899, 6, 655375, 655363, 6, 655376, 720899, 6, 524306, 720899, 6, 458770, 720899, 6, 589842, 720899, 6, 655377, 655363, 6, 655378, 720899, 6, 655363, 655363, 6, 589828, 720899, 6, 655364, 720899, 6, 589829, 655363, 6, 655365, 655363, 6, 1, 65539, 0, 2, 65539, 0, 3, 65539, 0, 4, 65539, 0, 5, 65539, 0, 6, 65539, 0, 7, 65539, 0, 8, 65539, 0, 9, 65539, 0, 10, 65539, 0, 11, 65539, 0, 12, 65539, 0, 13, 65539, 0, 14, 65539, 0, 15, 65539, 0, 16, 65539, 0, 17, 65539, 0, 18, 65539, 0, 65555, 1114115, 2, 131091, 1114115, 2, 196627, 1114115, 2, 262163, 1114115, 2, 327699, 1114115, 2, 393235, 1114115, 2, 458771, 1114115, 2, 524307, 1114115, 2, 589843, 1114115, 2, 655379, 1114115, 2, 720914, 851971, 8, 720913, 851971, 8, 720912, 851971, 8, 720911, 851971, 8, 720910, 851971, 8, 720909, 851971, 8, 720908, 851971, 8, 720907, 851971, 8, 720906, 851971, 8, 720905, 851971, 8, 720904, 851971, 8, 720903, 851971, 8, 720902, 851971, 8, 720901, 851971, 8, 720900, 851971, 8, 720899, 851971, 8, 720898, 851971, 8, 720897, 851971, 8, 655360, 3, 7, 589824, 3, 7, 524288, 3, 7, 458752, 3, 7, 393216, 3, 7, 327680, 3, 7, 262144, 3, 7, 196608, 3, 7, 131072, 3, 7, 65536, 3, 7, 720896, 3, 8, 720915, 1114115, 8, 19, 1114115, 0, 0, 3, 0)
layer_1/tile_data = PackedInt32Array(131077, 917508, 0, 196613, 917508, 1, 262149, 917508, 2, 131078, 983044, 0, 196614, 983044, 1, 262150, 983044, 2)
layer_2/tile_data = PackedInt32Array(327685, 524293, 2, 327686, 589829, 2, 131086, 196613, 4, 196622, 196613, 5, 262158, 196613, 5, 327694, 196613, 6, 131087, 262149, 4, 196623, 262149, 5, 262159, 262149, 5, 327695, 262149, 6, 131085, 131077, 4, 196621, 131077, 5, 262157, 131077, 5, 327693, 131077, 6, 655377, 720901, 3, 655378, 786437, 3, 589840, 655365, 2, 655376, 655365, 3, 589841, 720901, 2, 589842, 786437, 2, 589825, 720901, 8, 655361, 720901, 9, 524289, 720901, 7, 524290, 786437, 7, 589826, 786437, 8, 655362, 786437, 9, 262145, 5, 10, 327681, 5, 11)
layer_3/tile_data = PackedInt32Array(524294, 196614, 1, 131081, 327686, 1)

[node name="YSort" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Character" parent="YSort" instance=ExtResource("2_1t6pp")]
y_sort_enabled = true
position = Vector2(163, 125)
scale = Vector2(0.9, 0.9)

[node name="Areas" type="Node2D" parent="."]
script = ExtResource("4_30um8")

[node name="area_paper" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/area_paper"]
position = Vector2(105, 139)
shape = SubResource("CircleShape2D_g8i80")

[node name="drawing" type="Sprite2D" parent="Areas"]
position = Vector2(160, 96)
texture = ExtResource("4_ony6e")

[node name="area_bookshelf" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/area_bookshelf"]
position = Vector2(232, 64)
shape = SubResource("RectangleShape2D_vfunq")

[node name="area_clock" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/area_clock"]
position = Vector2(151, 80.25)
shape = SubResource("RectangleShape2D_gf8jp")

[node name="area_plant" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/area_plant"]
position = Vector2(26, 84)
shape = SubResource("RectangleShape2D_qfpvr")

[node name="area_door" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/area_door"]
position = Vector2(96, 78)
shape = SubResource("RectangleShape2D_ftuvi")
